# saga

./: .coveragerc  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  chapter_drafting_logic.py  chapter_evaluation_logic.py  chapter_planning_logic.py  chapter_revision_logic.py  complexity_report.py  comprehensive_evaluator_agent.py  config.py  context_generation_logic.py  database_manager.py  docker-compose.yml  drafting_agent.py  finalize_agent.py  initial_setup_logic.py  inspect_kg.py  kg_constants.py  kg_maintainer_agent.py  knowledge_management_logic.py  llm_interface.py  main.py  manage_neo4j.sh  markdown_story_parser.py  migrate_json_to_orm.py  mypy.ini  nana_orchestrator.py  novel_agent.py  novel_logic.py  parsing_utils.py  patch_validation_agent.py  planner_agent.py  prompt_data_getters.py  prompt_renderer.py  pyproject.toml  requirements.txt  reset_neo4j.py  (+13 more)
agents/: __init__.py  comprehensive_evaluator_agent.py  drafting_agent.py  evaluator_agent.py  finalize_agent.py  kg_maintainer_agent.py  patch_validation_agent.py  planner_agent.py  pre_flight_check_agent.py  world_continuity_agent.py
chapter_generation/: __init__.py  context_kg_utils.py  context_models.py  context_orchestrator.py  context_providers.py  context_service.py  drafting_service.py  evaluation_service.py  finalization_service.py  prerequisites_service.py  revision_service.py
core/: __init__.py  db_manager.py  llm_interface.py  usage.py
core_db/: __init__.py  base_db_manager.py
data_access/: __init__.py  chapter_queries.py  character_queries.py  kg_queries.py  plot_queries.py  repository.py  world_queries.py
docs/: step5_redesign.md
ingestion/: __init__.py  ingestion_manager.py
initialization/: __init__.py  data_loader.py  genesis.py  models.py
kg_maintainer/: __init__.py  cypher_generation.py  merge.py  models.py  parsing.py
models/: __init__.py  agent_models.py  kg_models.py  user_input_models.py
novel_output/: README.md  db_inspect_example.txt  novel_data.db
orchestration/: __init__.py  chapter_flow.py  chapter_generation_runner.py  cli_runner.py  (+8 more)
(+293 files in other folders)
